CIの導入
